# robot_body_filter

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  laser_filters.xml  package.xml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  main.yml
cmake/: DetectOptional.cmake
examples/: README.md  body_filter_node.launch  full_example.launch  full_example.urdf  full_example.yaml  jasmine_velodyne.yaml  tradr_2d_lidar.yaml  tradr_realsense_d435.yaml  vlp16_params.yaml
include/robot_body_filter/: RayCastingShapeMask.h  RobotBodyFilter.h  TfFramesWatchdog.h
include/robot_body_filter/utils/: bodies.h  cloud-impl.hpp  cloud.h  crop_box.h  filter_utils.hpp  obb.h  optional.hpp  set_utils.hpp  shapes.h  string_utils.hpp  tf2_eigen.h  tf2_sensor_msgs.h  time_utils.hpp  urdf_eigen.hpp  xmlrpc_traits.h
include/robot_self_filter/: RayCastingShapeMask.h  RobotSelfFilter.h  TfFramesWatchdog.h  bodies.h  cloud.h  self_mask.h  self_see_filter.h  shapes.h
include/robot_self_filter/utils/: bodies.h  cloud.h  filter_utils.hpp  set_utils.hpp  shapes.h  string_utils.hpp  tf2_eigen.h  time_utils.hpp  urdf_eigen.hpp
launch/: pointcloud_filter_node.launch
msg/: OrientedBoundingBox.msg  OrientedBoundingBoxStamped.msg  Sphere.msg  SphereStamped.msg
param/: vlp16_filter_params.yaml
rviz/: debug.rviz
src/: RayCastingShapeMask.cpp  RobotBodyFilter.cpp  RobotSelfFilter.cpp  TFFramesWatchdog.cpp  bodies.cpp  load_mesh.cpp  self_filter.cpp  self_mask.cpp  shapes.cpp  test.cpp  test_filter.cpp
src/utils/: bodies.cpp  cloud.cpp  crop_box.cpp  obb.cpp  shapes.cpp  string_utils.cpp  tf2_eigen.cpp  tf2_sensor_msgs.cpp  time_utils.cpp
test/: box.dae  test_bodies.cpp  test_cloud.cpp  test_filter_utils.cpp  test_filter_utils.test  test_obb.cpp  test_ray_casting_shape_mask.blend  test_ray_casting_shape_mask.cpp  test_robot_body_filter.cpp  test_robot_body_filter.test  test_robot_body_filter.yaml  test_set_utils.cpp  test_shapes.cpp  test_string_utils.cpp  test_tf2_eigen.cpp  test_tf2_sensor_msgs.cpp  test_tf_frames_watchdog.cpp  test_time_utils.cpp  test_urdf_eigen.cpp  test_xmlrpc_traits.cpp  triangle.dae  utils.cpp
