<package format="2">
  <name>robot_self_filter</name>
  <version>0.1.31</version>
  <description>Filters the robot's body out of point clouds.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robot_self_filter</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>filters</depend>
  <depend>geometric_shapes</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <export>
    <filters plugin="${prefix}/laser_filters.xml"/>
  </export>
</package>
